--- a/ArcadeMatch.Avalonia/MainWindow.axaml
+++ b/ArcadeMatch.Avalonia/MainWindow.axaml
@@ -2,8 +2,13 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        xmlns:local="clr-namespace:ArcadeMatch.Avalonia.Controls"
+        mc:Ignorable="d" d:DesignWidth="600" d:DesignHeight="800"
         x:Class="ArcadeMatch.Avalonia.MainWindow"
-        Title="ArcadeMatch.Avalonia">
-    Welcome to Avalonia!
+        Title="GameFinder" Width="600" Height="800">
+    <Grid RowDefinitions="Auto,*">
+        <TextBlock Text="GameFinder" FontSize="20" HorizontalAlignment="Center" Margin="0,10" />
+        <local:Tabs Grid.Row="1" />
+    </Grid>
 </Window>
+
