--- a/ArcadeMatch.Avalonia/Controls/SessionLobby.axaml
+++ b/ArcadeMatch.Avalonia/Controls/SessionLobby.axaml
@@ -1,5 +1,7 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="clr-namespace:ArcadeMatch.Avalonia.Controls"
+             xmlns:sys="clr-namespace:System;assembly=System.Runtime"
              x:Class="ArcadeMatch.Avalonia.Controls.SessionLobby">
     <Grid>
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Width="500" Spacing="15">
@@ -10,7 +12,13 @@
                     <Button Content="📋 Copy" Click="CopyCode_OnClick"/>
                 </StackPanel>
             </Border>
-            <ListBox x:Name="UsersListBox" MinHeight="120"/>
+            <ListBox x:Name="UsersListBox" MinHeight="120" SelectionMode="Single">
+                <ListBox.ItemTemplate>
+                    <DataTemplate x:DataType="{x:Null}" x:CompileBindings="False">
+                        <TextBlock Text="{Binding DisplayName}" Margin="5"/>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="10">
                 <Button Content="🚪 Leave" Click="LeaveButton_Click"/>
                 <Button Content="🚀 Start Game" Click="StartButton_OnClick"/>
