--- a/ArcadeMatch.Avalonia/Controls/Swiping.axaml
+++ b/ArcadeMatch.Avalonia/Controls/Swiping.axaml
@@ -35,6 +35,14 @@
                     <TextBlock Text="💰 Pricing"/>
                     <TextBlock Text="Price Info" x:Name="PriceTextBlock"/>
                 </StackPanel>
+                <StackPanel>
+                    <TextBlock Text="⭐ Metacritic"/>
+                    <TextBlock Text="Metacritic Info" x:Name="MetacriticTextBlock"/>
+                </StackPanel>
+                <StackPanel>
+                    <TextBlock Text="🗣️ Reviews"/>
+                    <TextBlock Text="Review Info" x:Name="ReviewTextBlock"/>
+                </StackPanel>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="20" Margin="0,10,0,0">
                     <Button Content="👎 Pass" Width="120" Height="50" Click="OnDislikeButtonClick" x:Name="Dislike"/>
                     <Button Content="❤️ Like" Width="120" Height="50" Click="OnLikeButtonClick" x:Name="Like"/>
